[tool.poetry]
name = "performance_correlator"
version = "0.1.0"
description = ""
authors = ["Simon Cottrill <git@tastyworm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
python-evtx = "^0.7.4"
seaborn = "^0.13.2"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
